@@ -255,6 +255,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\common\md5calc.c"
+				>
+			</File>
+			<File
+				RelativePath="..\src\common\md5calc.h"
+				>
+			</File>
+			<File
 				RelativePath="..\src\common\mapindex.c"
 				>
 			</File>
